Fix highlighting whitespace. Add tokenizer page, though not complete.

--- a/src/components/index/dashboard/project_listing/_assets/style.css
+++ b/src/components/index/dashboard/project_listing/_assets/style.css
@@ -5,3 +5,11 @@
     justify-content: center;
     align-items: center;
 }
+
+.center-wv-stretch {
+    padding: 30px;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
